--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-04-10
+2018-06-07
 
         * Version 1.6.0 released
         ========================
 
+        Remove ctools::is_valid_filename() method.
         Fix bug when using precomputed model in csresspec (#2448)
         Keep existing library path in installation script on Mac OS X (#2420)
         Add show_rmf.py example script
