--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-06-07
+2018-06-11
 
         * Version 1.6.0 released
         ========================
 
+        Change formula for number of true energy bins in csphagen (#2490)
         Remove ctools::is_valid_filename() method
         Fix bug when using precomputed model in csresspec (#2448)
         Keep existing library path in installation script on Mac OS X (#2420)
