--- a/NEWS
+++ b/NEWS
@@ -217,7 +217,10 @@ None
 
 csphagen - Generate On/Off observations
 ---------------------------------------
-None
+The true number of energy bins is now computed using
+   int(bins_per_decade * num_of_decades + 0.5)
+making sure in addition that the result is at least 1. This provides better
+control over the number of energy bins (#2490).
 
 
 csphasecrv - Generate phase curve
