--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -10,7 +10,7 @@ ctools 1.6 is a major release that adds significant functionality.
 
 In particular, this release provides:
 
-* ...
+* Support for Xspec spectral analysis
 
 
 Bug fixes
@@ -27,6 +27,8 @@ Improvements
 
 * [`2490 <https://cta-redmine.irap.omp.eu/issues/2490>`_] -
   Change formula for number of true energy bins in :ref:`csphagen`
+* [`2404 <https://cta-redmine.irap.omp.eu/issues/2404>`_] -
+  :ref:`csphagen` produces Xspec compliant data
 * Add ``show_rmf.py`` example script
 * [`2313 <https://cta-redmine.irap.omp.eu/issues/2313>`_] -
   Add `ras()` and `decs()` methods to :ref:`csobsinfo`
