Revise handling of MET time references.
Remove ctools::time_reference constant and handle the time reference for MET either by using the time reference from the input observation, or by adding a hidden "mjdref" parameter. The following tools transparently use the time reference of the input observation:
* ctselect (apply time reference of each input observation)
* ctbin (apply time reference of first input observation)
* csobsselect (apply time reference of each input observation)

A "mjdref" parameter was added the following tools:
* ctobssim
* cslightcrv
* cspull
* csviscube
* csobsdef

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-06-12
+2018-06-13
 
         * Version 1.6.0 released
         ========================
@@ -12,6 +12,8 @@
         Allow specifying of input sky map in ctskymap (#2311)
         Add ras() and decs() methods to csobsinfo (#2313)
         Accelerate IRF and RING background methods in ctskymap (#2309)
+        Define MET with respect to the observation time reference or "mjdref"
+          parameter (#2054)
 
 
 2018-04-26
