--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -36,6 +36,9 @@ Improvements
   Allow specifying of input skymap to :ref:`ctskymap` tool
 * [`2309 <https://cta-redmine.irap.omp.eu/issues/2309>`_] -
   Accelerate `IRF` and `RING` background methods in :ref:`ctskymap`
+* [`2045 <https://cta-redmine.irap.omp.eu/issues/2045>`_] -
+  Define MET with respect to the observation time reference or the ``mjdref``
+  user parameter (#2054)
 
 
 New features
@@ -48,3 +51,5 @@ Clean up
 --------
 
 * Remove ``ctools::is_valid_filename()`` method
+* [`2045 <https://cta-redmine.irap.omp.eu/issues/2045>`_] -
+  Remove ``ctools::time_reference`` constant
