--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-06-14
+2018-06-15
 
         * Version 1.6.0 released
         ========================
@@ -10,8 +10,9 @@
         Keep existing library path in installation script on Mac OS X (#2420)
         csphagen produces Xspec compliant data (#2404)
         Add show_rmf.py example script
-        Allow specifying of input sky map in ctskymap (#2311)
         Add ras() and decs() methods to csobsinfo (#2313)
+        Also compute TS in csspec for On/Off analysis using wstat statistic (#2312)
+        Allow specifying of input sky map in ctskymap (#2311)
         Accelerate IRF and RING background methods in ctskymap (#2309)
         Define MET with respect to the observation time reference or "mjdref"
           parameter (#2054)
