Implement Python pickling support (#1938)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-06-15
+2018-06-29
 
         * Version 1.6.0 released
         ========================
@@ -14,8 +14,10 @@
         Also compute TS in csspec for On/Off analysis using wstat statistic (#2312)
         Allow specifying of input sky map in ctskymap (#2311)
         Accelerate IRF and RING background methods in ctskymap (#2309)
+        Add upper limit computation is csspec for NODES method (#2233)
         Define MET with respect to the observation time reference or "mjdref"
           parameter (#2054)
+        Implement Python pickeling support (#1938)
 
 
 2018-04-26
