--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -12,6 +12,7 @@ In particular, this release provides:
 
 * Support for Xspec spectral analysis
 * Improved computation speed for :ref:`ctskymap` and :ref:`csphagen`
+* Support for Python pickeling
 
 
 Bug fixes
@@ -41,6 +42,8 @@ Improvements
   Allow specifying of input skymap to :ref:`ctskymap` tool
 * [`2309 <https://cta-redmine.irap.omp.eu/issues/2309>`_] -
   Accelerate `IRF` and `RING` background methods in :ref:`ctskymap`
+* [`2233 <https://cta-redmine.irap.omp.eu/issues/2233>`_] -
+  Add upper limit computation is :ref:`csspec` for ``NODES`` method
 * [`2045 <https://cta-redmine.irap.omp.eu/issues/2045>`_] -
   Define MET with respect to the observation time reference or the ``mjdref``
   user parameter (#2054)
@@ -49,7 +52,8 @@ Improvements
 New features
 ------------
 
-* ...
+* [`1938 <https://cta-redmine.irap.omp.eu/issues/1938>`_] -
+  Support pickeling of ctools and cscripts in Python
 
 
 Clean up
