--- a/NEWS
+++ b/NEWS
@@ -288,6 +288,10 @@ csspec now properly computes the Test Statistic for an On/Off analysis using
 the "wstat" statistic in the case that the input model definition XML file
 did not contain a background model (#2312).
 
+csspec now computes upper limits also for the NODES method by fixing all node
+intensities and varying each node until the log-likelihood increases by a
+certain amount (#2233).
+
 
 cssrcdetect - Detects sources in sky map
 ----------------------------------------
