--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-06-29
+2018-07-03
 
         * Version 1.6.0 released
         ========================
@@ -7,6 +7,7 @@
         Change formula for number of true energy bins in csphagen (#2490)
         Remove ctools::is_valid_filename() method
         Fix bug when using precomputed model in csresspec (#2448)
+        Parallelise cslightcrv (#2421)
         Keep existing library path in installation script on Mac OS X (#2420)
         csphagen produces Xspec compliant data (#2404)
         Add show_rmf.py example script
