--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.6.0
 
-29 June 2018
+3 July 2018
 
 
 Introduction
@@ -193,6 +193,9 @@ None
 
 cslightcrv - Generate light curve
 ---------------------------------
+Add hidden "nthreads" parameter and implement parallelisation of light
+curve computation (#2421).
+
 Add hidden "mjdref" parameter for the specification of the MET reference
 (#2054).
 
