--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -12,7 +12,7 @@ In particular, this release provides:
 
 * Support for Xspec spectral analysis
 * Improved computation speed for :ref:`ctskymap` and :ref:`csphagen`
-* Parallelisation of :ref:`cslightcrv`
+* Parallelisation of various cscripts
 * Support for Python pickeling
 
 
@@ -34,8 +34,6 @@ Improvements
   Transparently update parameter files
 * [`2490 <https://cta-redmine.irap.omp.eu/issues/2490>`_] -
   Change formula for number of true energy bins in :ref:`csphagen`
-* [`2421 <https://cta-redmine.irap.omp.eu/issues/2421>`_] -
-  Parallelise :ref:`cslightcrv`
 * [`2404 <https://cta-redmine.irap.omp.eu/issues/2404>`_] -
   :ref:`csphagen` produces Xspec compliant data
 * Add ``show_rmf.py`` example script
@@ -57,6 +55,9 @@ Improvements
 New features
 ------------
 
+* [`2421 <https://cta-redmine.irap.omp.eu/issues/2421>`_] -
+  Parallelise :ref:`cslightcrv`, :ref:`csphasecrv`, :ref:`csspec`, :ref:`cssens`,
+  :ref:`csphagen`, :ref:`cspull` and :ref:`cstsdist`
 * [`1938 <https://cta-redmine.irap.omp.eu/issues/1938>`_] -
   Support pickeling of ctools and cscripts in Python
 
