--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -35,8 +35,8 @@ Improvements
 * [`2490 <https://cta-redmine.irap.omp.eu/issues/2490>`_] -
   Change formula for number of true energy bins in :ref:`csphagen`
 * [`2421 <https://cta-redmine.irap.omp.eu/issues/2421>`_] -
-  Add `nthreads` parameter to :ref:`ctlike` and :ref:`cterror` to control
-  parallel computations
+  Add `nthreads` parameter to :ref:`ctobssim`, :ref:`ctbin`, :ref:`ctlike`, :ref:`cterror`
+  and :ref:`ctmodel` to control parallel computations
 * [`2404 <https://cta-redmine.irap.omp.eu/issues/2404>`_] -
   :ref:`csphagen` produces Xspec compliant data
 * Add ``show_rmf.py`` example script
