--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-07-25
+2018-07-27
 
         * Version 1.6.0 released
         ========================
 
+        Do no longer automatically import csroot2caldb (#2652)
         Transparently update parameter files (#2513)
         Change formula for number of true energy bins in csphagen (#2490)
         Remove ctools::is_valid_filename() method
