--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.6.0
 
-25 July 2018
+27 July 2018
 
 
 Introduction
@@ -288,7 +288,10 @@ parameter due to a bug in the code. This bug was fixed (#2448).
 
 csroot2caldb - Generates calibration database from ROOT file
 ------------------------------------------------------------
-None
+The script is no longer automatically imported by a "import cscript" statement
+since this led to some conflicts with the "--help" option due to the automatic
+opening of a X windows link. To use the tool in Python, use
+"from cscripts.csroot2caldb import csroot2caldb" (#2652).
 
 
 cssens - Computes sensitivity curve
