--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -42,6 +42,8 @@ Improvements
 * [`2404 <https://cta-redmine.irap.omp.eu/issues/2404>`_] -
   :ref:`csphagen` produces Xspec compliant data
 * Add ``show_rmf.py`` example script
+* [`2343 <https://cta-redmine.irap.omp.eu/issues/2343>`_] -
+  Change CTA 3D background ``BGD`` keywords to ``BKG``
 * [`2313 <https://cta-redmine.irap.omp.eu/issues/2313>`_] -
   Add `ras()` and `decs()` methods to :ref:`csobsinfo`
 * [`2312 <https://cta-redmine.irap.omp.eu/issues/2312>`_] -
