--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-08-01
+2018-08-03
 
         * Version 1.6.0 released
         ========================
 
+        Add hidden "use_irf_bkg" parameter to csphagen (#2659)
         Use full RMF true energy range for On/Off analysis in csspec (#2656)
         Defer import of ROOT module in csroot2caldb to run method (#2652)
         Transparently update parameter files (#2513)
