--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -32,6 +32,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2659 <https://cta-redmine.irap.omp.eu/issues/2659>`_] -
+  Add hidden ``use_irf_bkg`` parameter to :ref:`csphagen`
 * [`2656 <https://cta-redmine.irap.omp.eu/issues/2656>`_] -
   Use full ``RMF`` true energy range for On/Off analysis in :ref:`csspec`
 * [`2513 <https://cta-redmine.irap.omp.eu/issues/2513>`_] -
