Do not skip bins with zero counts in csspec (#2672)

--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -32,6 +32,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2672 <https://cta-redmine.irap.omp.eu/issues/2672>`_] -
+  Do not skip bins with zero counts in :ref:`csspec`
 * [`2670 <https://cta-redmine.irap.omp.eu/issues/2670>`_] -
   Use ``ENERG`` instead of ``ETRUE`` in energy dispersion axis names in
   :ref:`csroot2caldb`
