--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -37,6 +37,10 @@ Improvements
 * [`2670 <https://cta-redmine.irap.omp.eu/issues/2670>`_] -
   Use ``ENERG`` instead of ``ETRUE`` in energy dispersion axis names in
   :ref:`csroot2caldb`
+* [`2662 <https://cta-redmine.irap.omp.eu/issues/2662>`_] -
+  Add ``like_accuracy`` parameter to :ref:`ctbutterfly`, :ref:`cterror`,
+  :ref:`ctlike`, :ref:`cttsmap`, :ref:`ctulimit`, and :ref:`cstsmapsplit`
+  to allow controlling the accuracy of the maximum likelihood computation
 * [`2659 <https://cta-redmine.irap.omp.eu/issues/2659>`_] -
   Add hidden ``use_irf_bkg`` parameter to :ref:`csphagen`
 * [`2656 <https://cta-redmine.irap.omp.eu/issues/2656>`_] -
