--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.6.0
 
-19 September 2018
+21 September 2018
 
 
 Introduction
@@ -56,7 +56,10 @@ Copy the time reference from the first input observation (#2054).
 
 ctbkgcube - CTA background cube generation
 ------------------------------------------
-None
+Add ctbkgcube::cntcube() method so that a counts cube be specified as
+instance before running the tool. This avoids storing the counts cube on
+disk if the couts cube definition should be used to generate a background
+cube (#2685).
 
 
 ctbutterfly - Generate butterfly diagrams
