--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -34,6 +34,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2685 <https://cta-redmine.irap.omp.eu/issues/2685>`_] -
+  Add ``ctbkgcube::cntcube()`` method
 * Add ``use_irf_bkg`` parameter to :ref:`cslightcrv`
 * [`2671 <https://cta-redmine.irap.omp.eu/issues/2671>`_] -
   Do not skip bins with zero counts in :ref:`csspec`
