--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -36,7 +36,8 @@ Improvements
 
 * [`2685 <https://cta-redmine.irap.omp.eu/issues/2685>`_] -
   Add ``ctbkgcube::cntcube()`` method
-  Accout for varying energy thresholds in :ref:`ctbin` weight computation
+  Account for varying energy thresholds in :ref:`ctbin` weight computation
+  Unnormalize background cube values in :ref:`ctbkgcube`
 * Add ``use_irf_bkg`` parameter to :ref:`cslightcrv`
 * [`2671 <https://cta-redmine.irap.omp.eu/issues/2671>`_] -
   Do not skip bins with zero counts in :ref:`csspec`
