--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-09-22
+2018-10-17
 
         * Version 1.6.0 released
         ========================
 
+        Compute DETX and DETY in ctmodel if they are not available (#2694)
         Do no longer set missing boundaries in ctool::get_observations and
           ctool::setup_observations (#2686)
         Unnormalize background cube values in ctbkgcube (#2685)
