--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -19,6 +19,8 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* [`2694 <https://cta-redmine.irap.omp.eu/issues/2694>`_] -
+  Compute ``DETX`` and ``DETY`` in :ref:`ctmodel` if they are not available
 * [`2686 <https://cta-redmine.irap.omp.eu/issues/2686>`_] -
   Do no longer set missing boundaries in ``ctool::get_observations`` and
   ``ctool::setup_observations``
